overflow fix

--- a/node.js/public/css/style_.css
+++ b/node.js/public/css/style_.css
@@ -273,6 +273,10 @@ form.inline {
 	display: none;
 }
 
+.event {
+	overflow: auto;
+}
+
 
 
 
